Basic Authorization Implemented But Works Unexpectedly, Post API Works and Database Commands Are Executed, However Do Not Update Database

--- a/GtsDemoAPI_dotnet7/appsettings.json
+++ b/GtsDemoAPI_dotnet7/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DbConnection": "Server=DESKTOP-KIGJTPQ; Database=master_alper; User ID=sa; Password=12345; TrustServerCertificate=True;"
+  }
 }
